# libhat

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.github/workflows/: benchmark.yml  cmake-windows.yml  cmake.yml  release.yml
bindings/c/: CMakeLists.txt  README.md
bindings/c/include/libhat/c/: libhat.h
bindings/c/src/: libhat.cpp
bindings/cs/: .gitignore  README.md  libhat-sharp.sln
bindings/cs/libhat-sharp/: ArrayExtensions.cs  Pattern.cs  ScanResult.cs  Scanner.cs  Utils.cs  libhat-sharp.csproj
bindings/cs/libhat-sharp/Extensions/: ArrayExtensions.cs
bindings/cs/libhat-sharp/Native/: Functions.cs  ScanAlignment.cs  Signature.cs  Status.cs
bindings/cs/libhat-sharp/runtimes/win-x64/native/: .placeholder
bindings/cs/libhat-sharp/runtimes/win-x86/native/: .placeholder
bindings/cs/libhat-tests/: Program.cs  libhat-tests.csproj
bindings/java/: pom.xml
bindings/java/src/main/java/me/zero/libhat/: Hat.java  LibhatException.java  ProcessModule.java  Protection.java  ScanAlignment.java  ScanHint.java  Section.java  Segment.java  Signature.java
bindings/java/src/main/java/me/zero/libhat/jna/: Libhat.java
bindings/python/: README.md
bindings/python/src/libhat/: __init__.py  _ffi.py  address.py  enums.py  error.py  module.py  signature.py  span.py
cmake/: CPackProjectConfig.cmake.in  libhat-config.cmake.in
example/modules/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
examples/modules/: CMakeLists.txt  main.cpp
examples/vfthook/: main.cpp
include/: libhat.hpp  libhat.ixx
include/libhat/: Access.hpp  Callable.h  Callable.hpp  Callable.ixx  CompileTime.hpp  CompileTime.ixx  Concepts.hpp  Defines.hpp  FixedString.hpp  MemoryProtector.hpp  MemoryProtector.ixx  Platform.h  Process.hpp  Process.ixx  Result.hpp  Result.ixx  ScanMode.hpp  Scanner.hpp  Scanner.inl  Scanner.ixx  Signature.hpp  Signature.ixx  StringLiteral.hpp  System.hpp  access.hpp  compressed_pair.hpp  concepts.hpp  cow.hpp  cstring_view.hpp  defines.hpp  experimental.hpp  export.hpp  fixed_string.hpp  memory.hpp  memory_protector.hpp  platform.h  process.hpp  result.hpp  scanner.hpp  signature.hpp  (+5 more)
include/libhat/c/: libhat.h
include/libhat/detail/: compressed_pair.hpp
include/libhat/experimental/: call_wrapper.hpp
module/: libhat.cppm
msvc/: README.md  build.bat  libhat.lib
msvc/src/: Callable.hpp  CompileTime.hpp  Concepts.hpp  Defines.hpp  MemoryProtector.hpp  Process.cpp  Process.hpp  Scanner.cpp  Scanner.hpp  System.hpp  Traits.hpp
msvc/src/arch/arm/: System.cpp
msvc/src/arch/x86/: AVX2.cpp  AVX512.cpp  SSE.cpp  System.cpp
msvc/src/c/: libhat.cpp
msvc/src/os/win32/: MemoryProtector.cpp  Process.cpp  Scanner.cpp
scripts/: frequency.py  requirements.txt
src/: Process.cpp  Scanner.cpp  System.cpp  System.hpp  Utils.hpp
src/arch/arm/: Frequency.hpp  Neon.cpp  System.cpp  System.hpp
src/arch/x86/: AVX2.cpp  AVX512.cpp  Frequency.hpp  SSE.cpp  System.cpp  System.hpp
src/c/: libhat.cpp
src/os/: Win32.cpp
src/os/linux/: Common.hpp  MemoryProtector.cpp  Process.cpp
src/os/mac/: MemoryProtector.cpp  Process.cpp
src/os/unix/: Process.cpp  System.cpp
src/os/win32/: MemoryProtector.cpp  Process.cpp  Scanner.cpp  System.cpp
test/: CMakeLists.txt  MinecraftBedrock-Test.cpp
test/benchmark/: Chromium.cpp  Compare.cpp  CompareImpl.cpp
test/cmake/: get_cpm.cmake
test/info/: HardwareInfo.cpp
test/tests/: Cow.cpp  Process.cpp  Scanner.cpp
